# ai-dojo

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  setup.py
src/dojo/: app.py  controller.py
src/dojo/api/: main.py
src/dojo/api/endpoints/: agent_management.py  cyst_environment.py  scenarios.py  socket_manager.py
src/dojo/configurations/: configuration_1.json
src/dojo/configurations/configuration_1/: configuration_1.json  configuration_1.py
src/dojo/configurations/demo_configuration/: demo_configuration.json  demo_configuration.md  demo_configuration.py
src/dojo/core/: config.py
src/dojo/lib/: constants.py  util.py
src/dojo/schemas/: agents.py  configuration.py  environment.py
src/testing/: api_testing_script.py  cyst_infra.py
